tests/paczka1/fuzzy1/57335810.err
Error in line 18: ZY0XsUZlG S574 70,1
Error in line 19: ZY0XsUZlG S730 3,3
Error in line 14: BAhj S901 38,7
Error in line 22: ZY0XsUZlG S712 85,1
Error in line 31: eKmQBhgwqa S730 57,9
